tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-struct-field.ari
struct Bad {
  value i64,
}
